--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,11 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    non_constant_identifier_names: false
+    prefer_const_constructors: false
+    constant_identifier_names: false
+    use_build_context_synchronously: false
+    library_private_types_in_public_api: false
+    avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
