update github workflow to topic channel

--- a/.github/workflows/notifier.yaml
+++ b/.github/workflows/notifier.yaml
@@ -10,15 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: send custom message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        message: |
-          🙋‍♂️ ${{ github.actor }} created commit:
-          🖥 Commit message: ${{ github.event.commits[0].message }}
-          👨‍💻 Repository: ${{ github.repository }}
-          👨‍💻👨‍💻 Branch: ${{ github.ref }}
-          👨‍💻👨‍💻👨‍💻 Ref: ${{ github.ref_name }}
-          📈 See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+      run: |
+        msg_text=' 🙋‍♂️ ${{ github.actor }} created commit:\n🖥 Commit message: ${{ github.event.commits[0].message }}\n 👨‍💻 Repository: ${{ github.repository }}\n 👨‍💻👨‍💻 Branch: ${{ github.ref }}\n 👨‍💻👨‍💻👨‍💻 Ref: ${{ github.ref_name }}\n 📈 See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}'
+        curl -s -X POST 'https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage' \
+        -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${msg_text}&message_thread_id=${{ secrets.TELEGRAM_TOPIC_ID }}"
         
