--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,3 +9,5 @@ linter:
     library_private_types_in_public_api: false
     avoid_print: false  # Uncomment to disable the `avoid_print` rule
     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    avoid_init_to_null: false
+    unused_field: false
